--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -13,7 +13,7 @@
   </section>
   
    <div>
-    <p class="paragh">This was my grandmother's apple pie recipe. I have never seen another one
+    <p>This was my grandmother's apple pie recipe. I have never seen another one
      quite like it. It will always be my favorite and has won me several first place
      prizes in local competitions. I hope it becomes one of your favorites as well!</p>
      <img id="ima" src="images/recipe-info.png" alt="Cooking info">
